--- a/SampleApp_Linux/index.html
+++ b/SampleApp_Linux/index.html
@@ -32,4 +32,4 @@
 </body>
 </html>
 
-aws s3 cp c:\s3files s3://mys3bucket-testupload1/ --recursive
+<!-- aws s3 cp c:\s3files s3://mys3bucket-testupload1/ --recursive -->
